--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
     </div>
     
     <script src="./js/translator.js"></script>
+    <script>
+        document.addEventListener('contextmenu', event => event.preventDefault());
+        document.addEventListener('keydown', event => {
+          if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
+            event.preventDefault();
+          }
+        });
+      </script>
 </body>
 
 </html>
